2003-07-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec.c, cong-dispspec.h, cong-file-open.c, cong-plugin.c, plugin-dtd.c

	Big cleanup of the dispspec code

2003-07-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin_fo.c

	New file

	* Makefile.am, main.c, 

	Added plugin-fo.c

	* cong-file-export.c, cong-file-print.c, cong-plugin.c, cong-plugin.h, global.h, plugin-convert-case.c

	Only show the exporters and print methods that are relevant to the current document; port to v2.2 of the GNOME Print API (GnomePrintJob replacesGnmePrintMaster); pass document rather than FPI to the filter methods; disabled the case conversion plugin.
	
	* cong-app.h

	New file

	* cong-dispspec-registry.[ch], cong-dispspec.c, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-open.c, cong-menus.c, cong-node-properties-dialog.c, cong-plugin.c, cong-primary-window.c, cong-span-text-editor.c, cong-tree-view.c, global.h, main.c, plugin-docbook.c, popup.c, tree.c, xmledit.c

	Converted struct CongGlobals the_globals into struct CongApp the_app and moved into new header file

2003-07-03 Jeff Martin <jeff@custommonkey.org>

	* cong-menus.c

	Enabling the 'help' entry. (bugzilla 108540)

2003-07-02 Wastl <wastl@wastl.net>

	* plugin-website.c

	Putting a g_message below the if.
	See http://bugzilla.gnome.org/show_bug.cgi?id=116017 for details

2003-06-29 Geert Stappers <Geert.Stappers@xs4all.nl>

	* cong-menus.c

	Move declaration of structs to top of function,
	to make it compile on gcc 2.9x compilers.

2003-06-26 David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c, cong-dispspec.c, cong-dispspec.h, cong-document.c, cong-dom-view.c, cong-editor-widget.c, cong-node.h, cong-section-head-editor.c, cong-tree-view.c, cursor.c, popup.c, tree.c, xmldata.c, xmledit.c

	Added namespace support

	* cong-file-open.c

	Fixed a warning
	
	* cong-parser-error.c

	Fixed bug #115225.
	