@@ -93,67 +93,6 @@ void dtd_to_xds_importer_action_callback(CongImporter *importer, const gchar *ur
 		/* Do appropriate UI stuff: */
 		cong_ui_new_document_from_imported_xml(xml_doc,
 						       toplevel_window);
-
-#if 0
-		/* Build up the document and its content: */
-		xmlDocPtr xml_doc = xmlNewDoc("1.0");
-			
-		CongNodePtr root_node = xmlNewDocNode(xml_doc,
-						      NULL, /* xmlNsPtr ns, */
-						      "dispspec",
-						      NULL);
-
-		xmlDocSetRootElement(xml_doc,
-				     root_node);
-
-		/* Add the metadata node: */
-		{
-			CongNodePtr metadata;
-
-			metadata = xmlNewDocNode(xml_doc,
-						 NULL,
-						 "metadata",
-						 NULL);			
-			xmlAddChild(root_node, metadata);
-
-			{
-				gchar *name = g_strdup_printf(_("Autogenerated document type based on %s"), uri);
-				gchar *description = g_strdup_printf(_("This Conglomerate display specification was automatically generated from %s"), uri);
-
-				xmlAddChild(metadata, 
-					    xmlNewDocNode(xml_doc,
-							  NULL,
-							  "name",
-							  name)
-					    );			
-				xmlAddChild(metadata, 
-					    xmlNewDocNode(xml_doc,
-							  NULL,
-							  "description",
-							  description)
-					    );
-
-				g_free(name);
-				g_free(description);
-			}			
-		}
-
-		/* The <element-list> node: */
-		{
-			CongNodePtr element_list;
-
-			element_list = xmlNewDocNode(xml_doc,
-						     NULL,
-						     "element-list",
-						     NULL);			
-			xmlAddChild(root_node, element_list);
-
-			/* Traverse the DTD; building stuff */
-			{
-				/* FIXME */
-			}
-		}		
-#endif
 	}
 }
 
